--- a/flowers.css
+++ b/flowers.css
@@ -140,7 +140,7 @@ background: rgba(229, 84, 115, 0.05);
 }
 /* get the latest deal */
 .get{
-    background-image: url(/Rectangle\ 9.png);
+    background-image: url(./Rectangle\ 9.png);
     text-align: center;
     margin: 90px;
 
