--- a/flowers.css
+++ b/flowers.css
@@ -172,3 +172,7 @@ background: rgba(229, 84, 115, 0.05);
     background: rgba(39, 39, 39, 0.05);
     margin: 100px; 
    }
+   .logo{
+    height: 30px;
+
+   }
